Store and retrieve one-time pre-keys by UUID